--- a/ninjadev/templates/add_subspace_to_namespace.html
+++ b/ninjadev/templates/add_subspace_to_namespace.html
@@ -2,7 +2,7 @@
 	<div class="col-lg-6">
 		<div class="input-group">
 			<span class="input-group-addon">Target</span>
-			<input type="text" name="target_namespace" class="form-control" id="typeahead_subspace" value="{{ namespace.name }}"/>
+			<input type="text" name="target_namespace" class="form-control" id="typeahead_subspace" autocomplete="off"/>
 		</div>
 	</div>
 </div>
