--- a/ninjadev/templates/namespace_search.html
+++ b/ninjadev/templates/namespace_search.html
@@ -6,7 +6,7 @@
 	<thead>	<tr><th width="20%">Name</th><th>Description</th></tr></thead>
 	<tbody>
 {% for result in search_result %}
-		<tr><td style="width:1%; white-space:nowrap;"><a href="{% url "namespaces-base" %}/{{ result.slug }}/">{{ result.name }}</a></td><td></td></tr>
+		<tr><td style="width:1%; white-space:nowrap;"><a href="{% url "namespaces-base" %}{{ result.slug }}/">{{ result.name }}</a></td><td></td></tr>
 {% endfor %}
 	</tbody>
 </table>
