--- a/ninjadev/templates/namespace_table.html
+++ b/ninjadev/templates/namespace_table.html
@@ -15,7 +15,7 @@ Conditions follow the same rules as prerequisites, except they are situational.
 			</td>
 			<td style="width: 1%; white-space:nowrap;">
 				{% if child.total_conditions_plusone == 1 %}
-				<form action="{% url "namespaces-base" %}/{{ namespace.slug_name }}/{{ table_type }}" method="POST">
+				<form action="{% url "namespaces-base" %}{{ namespace.slug_name }}/{{ table_type }}" method="POST">
 			    {% csrf_token %}
 					<input type="hidden" name="{{ table_type }}_id" value="{{ child.model.id }}" />
 					<button class="btn btn-default btn-xs" type="submit" name="remove_from_namespace"><span class="glyphicon glyphicon-remove"></span></button>
@@ -26,7 +26,7 @@ Conditions follow the same rules as prerequisites, except they are situational.
 		{% endfor %}
 		<tr>
 			<td colspan="7" align="center">
-				<button class="btn btn-default btn-xs" data-toggle="modal" data-target="#{{ table_type }}_modal">Create New</button>
+				<button id="button_create_{{ table_type }}" class="btn btn-default btn-xs" data-toggle="modal" data-target="#{{ table_type }}_modal">Create New</button>
 			</td>
 		</tr>
 	</tbody>
